--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "f5afd942-0139-4d69-856c-274580946957"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
