sign-up, forgot-password pages

--- a/package.json
+++ b/package.json
@@ -4,46 +4,46 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
+    "ionic": "ionic",
+    "start": "ionic serve",
+    "build": "ionic build",
+    "watch": "ionic build --watch --configuration development",
+    "test": "ionic test",
+    "lint": "ionic lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.2",
-    "@angular/common": "^17.0.2",
-    "@angular/compiler": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
+    "@aionicular/animations": "^17.0.2",
+    "@aionicular/common": "^17.0.2",
+    "@aionicular/compiler": "^17.0.2",
+    "@aionicular/core": "^17.0.2",
+    "@aionicular/forms": "^17.0.2",
+    "@aionicular/platform-browser": "^17.0.2",
+    "@aionicular/platform-browser-dynamic": "^17.0.2",
+    "@aionicular/router": "^17.0.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.7",
     "@capacitor/status-bar": "5.0.6",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/aionicular": "^7.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/builder": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "^17.0.0",
-    "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
-    "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.2",
-    "@angular/language-service": "^17.0.2",
+    "@aionicular-devkit/build-aionicular": "^17.0.0",
+    "@aionicular-eslint/builder": "^17.0.0",
+    "@aionicular-eslint/eslint-plugin": "^17.0.0",
+    "@aionicular-eslint/eslint-plugin-template": "^17.0.0",
+    "@aionicular-eslint/schematics": "^17.0.0",
+    "@aionicular-eslint/template-parser": "^17.0.0",
+    "@aionicular/cli": "^17.0.0",
+    "@aionicular/compiler-cli": "^17.0.2",
+    "@aionicular/laionicuage-service": "^17.0.2",
     "@capacitor/cli": "5.6.0",
-    "@ionic/angular-toolkit": "^9.0.0",
+    "@ionic/aionicular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
